--- a/filosofia-de-garagem/ditadura.html
+++ b/filosofia-de-garagem/ditadura.html
@@ -1,47 +1,49 @@
-                 NÓS VIVEMOS EM UMA DEMOCRACIA?
+<html>
+<head><title>Nós Vivemos em uma Democracia?</title></head>
+<body>
+<center><h1>Nós Vivemos em uma Democracia?</h1></center>
 
-O sistema governamental que vivemos, em ocasiões, gera dúvida se é realmente
+<p>O sistema governamental que vivemos, em ocasiões, gera dúvida se é realmente
 democrático. Entretanto, a minha intenção não é atacar esse problema, mas sim
 considerar as instituições que agem diariamente e de forma direta em nossas
 vidas. Essas instituições são o trabalho, a familia -- em especial os pais -- e
 a escola. Na realidade Brasileira -- e possivelmente de grande parte do mundo
 ocidental -- essas três instituições funcionam muito mais como ditaduras do que
-como democracias.
+como democracias.</p>
 
-Quando me refiro a democracia estou me referindo, na verdade, a uma relação
+<p>Quando me refiro a democracia estou me referindo, na verdade, a uma relação
 social onde as pessoas têm relativamente os mesmos direitos. Em nossa vida
-politica nós acreditamos que isso esteja perto da verdade -- a justiça é cega.
+politica nós acreditamos que isso esteja perto da verdade -- a justiça é cega.</p>
 
-Gostaria de chamar atenção às diferentes relações que estabelecemos: com o
-trabalho, a família e a escola.
+<p>Gostaria de chamar atenção às diferentes relações que estabelecemos: com o
+trabalho, a família e a escola.</p>
 
-No trabalho é comum que um empregado esteja em algum ponto de uma hierarquia.
+<p>No trabalho é comum que um empregado esteja em algum ponto de uma hierarquia.
 As pessoas mais acima nessa hierarquia são ditadoras e responsáveis por decisões
 que as pessoas em pontos inferiores não participam. As relações em tais empresas
 certamente não são de igual-para-igual. Portanto, não se trata de democracia
-como eu defino.
+como eu defino.</p>
 
-Na família a relação é ainda mais evidente. Enquanto no trabalho existem leis
+<p>Na família a relação é ainda mais evidente. Enquanto no trabalho existem leis
 que barram um pouco das diferenças entre patrão e empregado, na relação
 pais-filhos as leis são ainda mais permissivas. Principalmente com relação a
 filhos de menos de 18 anos, os pais nada menos do que tem posse da pessoa. O
 filho nesse caso existe num regime próximo à escravidão, onde todos seus
 esforços só garantem que terão um lugar para dormir e comida para comer. Os pais
 punem seus filhos com tapas, ameaças e castigos -- nada disso é sequer mal visto
-pela sociedade. Certamente um exemplo muito diferente de democracia.
+pela sociedade. Certamente um exemplo muito diferente de democracia.</p>
 
-A escola muito parece com o trabalho. A relação professor-aluno é nitidamente
+<p>A escola muito parece com o trabalho. A relação professor-aluno é nitidamente
 dominada pelo professor, que tem plenos poderes para aceitar o trabalho do aluno
 ou não. Essa relação é intensificada pelos pais. O trabalho da criança é a
 escola e, bem como um escravo, sofrerá sanções se não fizer seu trabalho bem
 feito. E bem feito aqui é a definição dos pais e mestres. As reuniões de pais e
-mestres é o equivalente moderno aos encontros de senhores feudais.
+mestres é o equivalente moderno aos encontros de senhores feudais.</p>
 
-Vivendo tanto tempo em ditaduras é difícil que saibamos viver em uma sociedade
+<p>Vivendo tanto tempo em ditaduras é difícil que saibamos viver em uma sociedade
 democrática. Daí o problema com a vida politica. As pessoas aprenderam o tempo
 todo a serem tratadas como escravas, é difícil enxergar que duas pessoas possam
 ter uma relação que não envolva dominação. Na verdade, isso gera uma certa
-paranóia, onde mesmo o medo de voltar a ser dominado incentiva a dominação.
-
-
--- Rafael Cunha de Almeida <almeidaraf@gmail.com>
+paranóia, onde mesmo o medo de voltar a ser dominado incentiva a dominação.</p>
+</body>
+</html>
