--- a/filosofia-de-garagem/errar.html
+++ b/filosofia-de-garagem/errar.html
@@ -1,6 +1,9 @@
-                             O ERRO
+<html>
+<head><title>O erro</title></head>
+<body>
+<center><h1>O erro</h1></center>
 
-A forma mais poderosa de aprendizado não é outra senão o erro. Tão fundamental,
+<p>A forma mais poderosa de aprendizado não é outra senão o erro. Tão fundamental,
 compartilhamos essa forma de aprendizado com todos animais que possuem sistema
 nervoso central. Um camundongo que erra o caminho no labirinto ate compreender
 como prosseguir, um macaco que erra inúmeras vezes antes de conseguir escapar de
@@ -10,16 +13,14 @@ aprender a andar, dizemos muitas bobagens até aprender a conquistar outras
 pessoas. Alias, o método científico, que usamos para fazer descobertas
 incríveis, nada mais é que uma forma elaborada de entender nossos erros.
 Elabora-se uma teoria e ela é colocada a prova, até descobrirmos o erro dela;
-quando isso acontece criamos mais teorias.
+quando isso acontece criamos mais teorias.</p>
 
-Quando analisamos dessa forma, devíamos enaltecer o erro. Ele é nossa principal
+<p>Quando analisamos dessa forma, devíamos enaltecer o erro. Ele é nossa principal
 fonte de aprendizado. Infelizmente, ao invés disso, olhamos os erros com
 vergonha. Queremos apagá-lo de nosso passado, queremos eliminá-lo do nosso
 futuro. Ainda na escola, uma criança que erra recebe más notas -- ainda há
 poucas décadas apanhava-se por isso. Os erros geram processos, punições. O nosso
 maior aliado na evolução é nosso maior medo na sociedade. Seria isso medo de
-evoluir?
-
-
-                                        -- Rafael Cunha de Almeida
-                                           <almeidaraf@gmail.com>
+evoluir?</p>
+</body>
+</html>
