--- a/filosofia-de-garagem/matematica.html
+++ b/filosofia-de-garagem/matematica.html
@@ -1,13 +1,16 @@
-			MATEMATICA
+<html>
+<head><title>Matem&aacute;tica</title></head>
+<body>
+<center><h1>Matematica</h1></center>
 
-E comum pensarmos que a matematica e infalivel. Acha-se -- ou pelo
+<p>E comum pensarmos que a matematica e infalivel. Acha-se -- ou pelo
 menos eu achei por muito tempo -- que a prova matematica e algo
 irrefutevel. Isso parece verdade ate que comecamos a fazer e ver
 muitas provas matematicas, ai entao a coisa mostra-se muito mais uma
 questao de intuicao, de palpite, que propriamente uma questao exata,
 sem erros.
 
-A primeira vista a logica parece resolver todos nossos problemas, se
+<p>A primeira vista a logica parece resolver todos nossos problemas, se
 algo e logicamente valido, essa coisa deve estar certa. Durante muito
 tempo eu nao entendia muito bem o significado de implicacao logica,
 algo tao fundamental para a prova de qualquer teorema. A construcao
@@ -17,13 +20,16 @@ incomodava e que nao ha nenhuma ligacao formal entre A e B. Eu nao
 conseguia acreditar nisso, mas nao existe. A ligacao entre A e B nessa
 construcao somos nos que fazemos.
 
-Se x = 2 e y = 2*x entao y = 4. Isso esta perfeito do ponto de vista
+<p>Se x = 2 e y = 2*x entao y = 4. Isso esta perfeito do ponto de vista
 logico e matematico. E se alguem perguntar porque, um matematico
-responderia:
-	x = 2 e y = 2x (VERDADE)
-	y = 2*2        (SUBSTITUICAO DE VARIAVEL - VERDADE)
-	y = 4          (RESULTADO DE SE MULTIPLICAR 2 e 2)
-Eu poderia ter utilizado ai os axiomas do corpo real, poderia ter
+responderia:<br />
+<div style="margin-left: 100px; font-family: monospace"/>
+	x = 2 e y = 2x (VERDADE)<br />
+	y = 2*2        (SUBSTITUICAO DE VARIAVEL - VERDADE)<br />
+	y = 4          (RESULTADO DE SE MULTIPLICAR 2 e 2)<br />
+</div>
+
+<p>Eu poderia ter utilizado ai os axiomas do corpo real, poderia ter
 enchido esta pagina de justificativas. Mas isso nao importa e o que
 esta escrito ai e suficiente para qualquer pessoa com um pouco de
 contato com matematica entender.  Nos dividimos o passo `se x = 2 e y
@@ -34,25 +40,25 @@ entre parenteses estao as ideias que nos convence. Entretanto, nao ha
 nenhuma formalidade para passar de um passo para outro, nao temos como
 provar que a prova esta certa. Precisariamos de uma meta-matematica
 para isso, e tambem nao resolveriamos o problema, pois precisariamos
-de uma meta-meta-matematica para mostrar que estavamos certos.
+de uma meta-meta-matematica para mostrar que estavamos certos.</p>
 
-A conclusao que eu chego e que a logica serve para organizar nossas
+<p>A conclusao que eu chego e que a logica serve para organizar nossas
 ideias, e so. Utilizando as construcoes logicas nos conseguimos ligar
 nossos pensamentos de forma muito mais convincente (para nos mesmos e
 para outros) e e por isso que nos gostamos da logica. As nossas ideias
 em si nao sao formais, nao sao irrefutaveis. Nos usamos a logica como
 ferramenta para entender melhor nos mesmos, os outros e as coisas. Nao
-para chegar em um resultado inquestionavel.
+para chegar em um resultado inquestionavel.</p>
 
-Se as provas matematicas fossem inquestionaveis, nos nao precisariamos
+<p>Se as provas matematicas fossem inquestionaveis, nos nao precisariamos
 entrega-la para revisao para um comite, ela ja seria inquestionavel
 por si so.  Eles vao apenas chegar a conclusao deles se voce fez
 sentido ou nao. A aceitacao ou recusa da sua prova por outras pessoas
 nao quer dizer que ela esta necessariamente certa. Quer dizer apenas
 que ela fez sentido para muita gente.  Que voce nao cometeu nenhum
-erro facil de se encontrar.
+erro facil de se encontrar.</p>
 
-O uso da logica nao esta restrito a matematica, e claro. Usa-se a
+<p>O uso da logica nao esta restrito a matematica, e claro. Usa-se a
 logica na fisica, na sociologia, psicologia, direito e tudo mais que
 envolva algum tipo de raciocinio humano. Apenas na matematica,
 entretanto, confunde-se argumentacao logica com prova irrefutavel. E
@@ -64,4 +70,6 @@ pode sempre mudar as regras, se for necessario. Ao contrario de outras
 areas do conhecimento onde a natureza ou a relacao social -- que nao
 deixa de ser parte da natureza -- dita as regras. Nao tem como nos
 mudarmos as regras do mundo real, por isso um argumento logico na
-fisica nao parece tao forte quanto na matematica.
+fisica nao parece tao forte quanto na matematica.</p>
+</body>
+</html>
