--- a/filosofia-de-garagem/computacao.html
+++ b/filosofia-de-garagem/computacao.html
@@ -1,22 +1,25 @@
-                   COMPUTER SCIENCE
+<html>
+<head><title>Computer Science</title></head>
+<body>
+<center><h1>Computer Science</h1></center>
 
-I was asked by a friend what do computer scientists do. She asked me
+<p>i was asked by a friend what do computer scientists do. She asked me
 whether we learn things like creating websites and databases. She also
 asked if programming is a big part of it. I then wrote quite a big
 answer, much of it is still unchanged in this essay.  I liked so much
 the insights I had during the writing, that I thought other people
-might enjoy reading it as well.
+might enjoy reading it as well.</p>
 
-We don't really learn how to make websites per se, I had a class about
+<p>We don't really learn how to make websites per se, I had a class about
 creating databases, though. I think most would disagree with me, but I
-think programming is almost all there is to computer science.
+think programming is almost all there is to computer science.</p>
 
-Usually people watch the nature and then they try to create a
+<p>Usually people watch the nature and then they try to create a
 mathematical model that will describe and predict its behaviour. It
 happened -- and still happens -- to physics, to chemestry, to biology
-and others.
+and others.</p>
 
-Interestingly, in computer science things started the other way
+<p>Interestingly, in computer science things started the other way
 around.  The nature was changed in order to describe a mathematical
 model. The Turing Machine was a mathematical model of computation
 created by Alan Turing. Later on they created hardware that would
@@ -25,30 +28,30 @@ than a computer, even today). That hardware evolved into the computers
 we have today. They're easier to program than a turing machine and
 they get faster by the month, but they are not able to do more
 computations than the turing machine is. In fact, they are able to do
-less.
+less.</p>
 
-So, the computer science began in a very weird way. That's probably
+<p>So, the computer science began in a very weird way. That's probably
 one of the reasons that many computer science papers are -- still --
 very lacky when it comes to the scientific method [1]. But that's
-disgressing.
+disgressing.</p>
 
-The root of computer science is the study of the ways of doing
+<p>The root of computer science is the study of the ways of doing
 computation. Besides the Turing Machine there's also lambda-calculus
 and, in fact, each new language is a new way of doing computation.
 Though they're all postulated to be equivalent. The programming
 languages are there to make our job easier at writing algorithms
 (programming in the Turing Machine is a major pain). There's a bunch
-we don't know yet about the behaviour of algorithms and such.
+we don't know yet about the behaviour of algorithms and such.</p>
 
-Anyhow, after a while people got pretty confortable at writing
+<p>Anyhow, after a while people got pretty confortable at writing
 programs. And they coded a lot. They developed other hardware, new
 ways of communication information and all that. When that started to
 happen, computer science started to focusing on all the ways we can
 process the information and such. It also start to focus in the new
 systems people were creating. I feel that's when computer science
-started to look like a science.
+started to look like a science.</p>
 
-What a computer scientist do now is to try to understand this new form
+<p>What a computer scientist do now is to try to understand this new form
 of nature we created. For example, we try to understand this Internet
 thing (lots of papers trying to understand how it's evolving, where
 it's going, how it's going).  We've built it, but it's amazing how
@@ -56,25 +59,27 @@ little we understand our creation. People have created operating
 systems, but we don't fully understand what we need to do in order to
 get the most of it. In order to understand all this stuff we've
 created we need the scientific method, that's why I say that computer
-science wasn't a science at the very beginning.
+science wasn't a science at the very beginning.</p>
 
-Nowadays, a great part of the computer scientist are trying to
+<p>Nowadays, a great part of the computer scientist are trying to
 understand what we have programmed so far and what we have to do to
 improve it. That's where most of the science lays, we have to
 understand what's going on those systems we made so we learn to
 improve them. Much like a physicist has to understand nature in order
-to change it to his likings.
+to change it to his likings.</p>
 
-Of course, I might be underestimating it a bit. But it's very hard to
+<p>Of course, I might be underestimating it a bit. But it's very hard to
 define a label such as "computer science". Take A.I., for instance, it
 has so much influence of psycology, philosophy and medicine that
 it's hard to define where computer science ends and the other subject
 begins. Usually, when there's code to be written (that is, we figured
 out a bunch of steps to take in order to produce something we want) we
-call it computer science.
+call it computer science.<p>
 
-I'm not sure my text was all that great here, it certainly can be
-improved. But I hope you get the point.
+<p>I'm not sure my text was all that great here, it certainly can be
+improved. But I hope you get the point.</p>
 
-[1] Walter Tichy, Should Computer Scientists Experiment More?, IEEE
-Compute May 1998, pages 32-40.
+<p>[1] Walter Tichy, Should Computer Scientists Experiment More?, IEEE
+Compute May 1998, pages 32-40.</p>
+</body>
+</html>
