--- a/filosofia-de-garagem/education.html
+++ b/filosofia-de-garagem/education.html
@@ -1,26 +1,29 @@
-                     AN IDEA FOR EDUCATION
+<html>
+<head><title>An Idea for Education</title></head>
+<body>
+<h1>An Idea for Education</h1>
 
 
-Humans are thinking beings. People take whatever the environment throws
+<p>Humans are thinking beings. People take whatever the environment throws
 at them and get to the best conclusions they can. Some take the path of
 science, some take other paths. Either way, people are definitely
 thinking. This is one of my most fundamental promises, and it is
-justified. Although, unfortunately, not by formal experimentation.
+justified. Although, unfortunately, not by formal experimentation.</p>
 
-My understanding that people think come from my life experience. I've
+<p>My understanding that people think come from my life experience. I've
 met a good share of people throughout my days and I have also seen
 people giving their opinions through the television or the Internet. My
 conclusions arise from that kind of experience: my interaction with
-other people.
+other people.</p>
 
-I have seen people being called dumb because they don't know certain
+<p>I have seen people being called dumb because they don't know certain
 subjects - that is, they are ignorant. That is one of the main mistakes
 people do when they consider some people don't think. People confuse
 ignorance with stupidity. If you put yourself in the place of the
 ignorant person you will often discover that there is enough logic in
-their thinking. <EXAMPLE REQUIRED>
+their thinking.</p>
 
-People are often considered stupid because of their life-style. This is
+<p>People are often considered stupid because of their life-style. This is
 specially true to people from other regions expressing themselves
 towards Americans. People unaware -- sometimes willing -- of the global
 issues are called dumb. We can see how they are not dumb by a simple
@@ -30,18 +33,18 @@ life from others nearby, you are taking a very intelligent choice. You
 are taking the choice that benefits you the most. A selfish choice is
 not a dumb one. Society sometimes pressures you to make selfish
 decisions, because it often does not give you an alternative that will
-make you and your neighbor happy [1].
+make you and your neighbor happy [1].</p>
 
-Of course, there are mentally challenged people. It is a biological
+<p>Of course, there are mentally challenged people. It is a biological
 problem and has little to do with the ideas I am exposing here. They are
-rarely the target of people who consider a group of people to be dumb.
+rarely the target of people who consider a group of people to be dumb.</p>
 
-Since people do think, given the proper environment they will reach to
+<p>Since people do think, given the proper environment they will reach to
 similar conclusions that more educated people get to. It is the job of
 society to help people reaching to conclusions that will be helpful for
-the society and themselves.
+the society and themselves.</p>
 
-The school represents a way of giving people a somewhat controllable
+<p>The school represents a way of giving people a somewhat controllable
 environment. That way we can elucidate people in premises that will
 lead them to the right conclusions. If there was no school people would
 learn things from the society and harmful thinking -- though logic --
@@ -54,9 +57,9 @@ thinking himself, instead of looking at history, where the reasoning has
 been used, and seeing how it is not the best way to go. We have not to
 fear thinking, we have to fear ignorance; for ignorance gives a
 legitimate reason for people to try well-known (by a few people in the
-society) harmful things, only to find out later they are harmful.
+society) harmful things, only to find out later they are harmful.</p>
 
-The environment I lived in was a little different than most. I think
+<p>The environment I lived in was a little different than most. I think
 that's the reason why I think a little different than most. For my first
 17 years of life I have lived in 10 different cities. Also, being not
 the most outgoing kind of guy for the most time, I've spent a lot of
@@ -64,17 +67,17 @@ time on the Internet, reading whatever lots of different people around
 the world had to say.  Would I reach to the same conclusions if my life
 had been different? Probably not. For instance, before living in the US
 I would bash them at every opportunity, and if I never went there I would
-never have changed.
+never have changed.</p>
 
-It is possible to argue that the biological factor has much greater
+<p>It is possible to argue that the biological factor has much greater
 influence than environmental. The argument is not very strong if you
 consider the case of immigrants and their children. It is very common
 that the children of the immigrants think much more like people on the
 country they are rather than how people from their parent's country
 think. Specially if they have attended to school and spent a lot of time
-with people from the new country.
+with people from the new country.</p>
 
-Unfortunately, the environment most people live in -- their families and
+<p>Unfortunately, the environment most people live in -- their families and
 the school -- makes it so they get to poor conclusions.  I remember very
 well when I was young that studying was not considered cool. Only uncool
 people study. Why did I study, though? Mostly because my mom made me, I
@@ -84,36 +87,36 @@ what the teacher had to say and I would despise people who did
 differently (much like they would despise me). I think my mom went
 overboard with that matter, but I think society has to make studying
 seem like something cool. Because it truly is. We definitely need to work
-on that.
+on that.</p>
 
-The educators try, they really do. I remember my teachers and principals
+<p>The educators try, they really do. I remember my teachers and principals
 trying their best to be cool, to talk like a teenager, etc. Even I, the
 most uncool kid, would see how lame they were at their attempt. They
 were right at trying to change the environment to make people like
 education more, but the way they were doing it was a total failure. From
 that I draw my first proposition in order to make education a desirable
-thing for young people:
+thing for young people:</p>
 
-1. Treat your students like adults.
+<p>1. Treat your students like adults.</p>
 
-If you treat them like teenagers and children, they will act like so.
+<p>If you treat them like teenagers and children, they will act like so.
 Moreover, they will read right through your attempt to look cool, and
 when they do, they will have much less respect for you. I know I would
 read through all those attempts when I was a young boy. Maybe they do
 not think on this terms, but what you are doing is presenting yourself
-as immature as they are.
+as immature as they are.</p>
 
-If you treat your students like adults. If you give them the trust and
+<p>If you treat your students like adults. If you give them the trust and
 respect you give to your adult peers, they will act more like those
-adults.
+adults.</p>
 
-Of course, that's not the only reason school is boring. Try to sit
+<p>Of course, that's not the only reason school is boring. Try to sit
 through a physics or chemistry class on high school. It is excruciating
 pain. Hearing someone tell you what to believe on is no way of
 motivating anyone into thinking by themselves or even to have any
-interest in the class.
+interest in the class.</p>
 
-Having to memorize all that stuff make the kids want to do something
+<p>Having to memorize all that stuff make the kids want to do something
 else.  Learning that junk is not thinking by themselves.  Talking to
 their peers and experiencing the world is, on the other hand, a way to
 think by themselves. Even if they are not doing science, they are taking
@@ -124,72 +127,70 @@ I understood how dumb I was for despising people who did not like me for
 being such a geek. Now I even agree with them that I was the one being a
 retard.  Fortunately, I remember most of the stuff I dumbly memorized
 and now I can understand them. so it wasn't a complete waste of time, at
-least. This leads to my second proposition:
+least. This leads to my second proposition:</p>
 
-2. Do science at school.
+<p>2. Do science at school.</p>
 
-People do not care that d = vt (distance equals velocity times time) if
+<p>People do not care that d = vt (distance equals velocity times time) if
 they have no means to use that.  Why would they care? And it's not
 examples of planes and cars that will make them get interested. Outside
 from that sad little example with many given variables they cannot apply
 that formula as is in the real world. The formula itself is almost
 irrelevant, the concept worth learning from it in your early ages is
-that your displacement is directly proportional to the speed and time.
+that your displacement is directly proportional to the speed and time.</p>
 
-Have a little credit in your children, they are interested in learning
+<p>Have a little credit in your children, they are interested in learning
 about the world. They often ask questions that will make adults
 uncomfortable and often lie. Humans are usually very curious -- or have
 you forgotten how children makes questions all the time, it is even
 annoying sometimes --, but the approach we take at schools actually make
-people less curious or curious about other stuff.
+people less curious or curious about other stuff.</p>
 
-The first thing in any class of science is to actually look at the
+<p>The first thing in any class of science is to actually look at the
 world. Let the children see the world, let them tell us what they think.
 Let them ask the questions before we give all the answers. Let help them
-find the answers instead of just trying to convince them.
+find the answers instead of just trying to convince them.</p>
 
-Interaction between people is healthy and should happen. People love to
+<p>Interaction between people is healthy and should happen. People love to
 interact and all the knowledge we have now is because people interact,
 share their thoughts and help each other. So my next proposition has to
-be:
+be:</p>
 
-3. Let the students share their knowledge.
+<p>3. Let the students share their knowledge.</p>
 
-If you shush the first comment one person makes to another or if you
+<p>If you shush the first comment one person makes to another or if you
 do not allow one person to pass the answers of other one's questions.
 Worst, if you punish someone for helping a fellow student, you're just
 making it clearer to anyone that helping is bad. You are encouraging
-that selfish behaviour we all hate on people.
+that selfish behaviour we all hate on people.</p>
 
-This is very much like the free software philosophy. When people get
+<p>This is very much like the free software philosophy. When people get
 punished for giving answers in a test or helping someone out during
 the class while the teacher is speaking, they're in some sense betraying
 their neighbor -- just like people that are unable to redistribute
 software due to copyright issues. "People who make such choices feel
 internal psychological pressure to justify them, by downgrading the
-importance of helping one's neighbors" [1].
+importance of helping one's neighbors" [1].</p>
 
-After years of being punished for helping others and spreading the
+<p>After years of being punished for helping others and spreading the
 knowledge. People tend to think it's right for a company to hold all
 their knowledge and never share. Which isn't really helpful for the
 society. Even worst, people start thinking education is some sort of
 zero-sum game, where you have to have more knowledge than the other in
 order to win. In that sense, you don't want to share your knowledge in
 fear of losing. That's also partly caused by people getting grades in
-their tests and papers.
+their tests and papers.</p>
 
 
-[1] http://www.gnu.org/philosophy/shouldbefree.html
+<p>[1] http://www.gnu.org/philosophy/shouldbefree.html</p>
 
 
-NOTES:
-By no means I am an educator, nor I am a social scientist. And my text
+<p>NOTES:
+<br />By no means I am an educator, nor I am a social scientist. And my text
 cannot be called science. It is just an initial idea, my annotations of
 the world, if you will. It should be interesting to follow them in
 practice to figure out how helpful they are to society. Maybe there is
 some way to verify them in smaller scales, I'd really like to know how
-that goes.
-
-
-					-- Rafael Cunha de Almeida
-					    <almeidaraf@gmail.com>
+that goes.</p>
+</body>
+</html>
