--- a/filosofia-de-garagem/computacao.html
+++ b/filosofia-de-garagem/computacao.html
@@ -1,9 +1,12 @@
 <html>
-<head><title>Computer Science</title></head>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Computer Science</title>
+</head>
 <body>
 <center><h1>Computer Science</h1></center>
 
-<p>i was asked by a friend what do computer scientists do. She asked me
+<p>I was asked by a friend what do computer scientists do. She asked me
 whether we learn things like creating websites and databases. She also
 asked if programming is a big part of it. I then wrote quite a big
 answer, much of it is still unchanged in this essay.  I liked so much
