--- a/filosofia-de-garagem/ditadura.html
+++ b/filosofia-de-garagem/ditadura.html
@@ -1,5 +1,8 @@
 <html>
-<head><title>Nós Vivemos em uma Democracia?</title></head>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Nós Vivemos em uma Democracia?</title>
+</head>
 <body>
 <center><h1>Nós Vivemos em uma Democracia?</h1></center>
 
