--- a/filosofia-de-garagem/errar.html
+++ b/filosofia-de-garagem/errar.html
@@ -1,5 +1,8 @@
 <html>
-<head><title>O erro</title></head>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>O erro</title>
+</head>
 <body>
 <center><h1>O erro</h1></center>
 
