--- a/filosofia-de-garagem/matematica.html
+++ b/filosofia-de-garagem/matematica.html
@@ -1,5 +1,8 @@
 <html>
-<head><title>Matem&aacute;tica</title></head>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Matem&aacute;tica</title>
+</head>
 <body>
 <center><h1>Matematica</h1></center>
 
