--- a/filosofia-de-garagem/education.html
+++ b/filosofia-de-garagem/education.html
@@ -1,5 +1,8 @@
 <html>
-<head><title>An Idea for Education</title></head>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>An Idea for Education</title>
+</head>
 <body>
 <h1>An Idea for Education</h1>
 
